--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
             <div class="profile-grid">
                 <div class="profile-card" data-user="moh">
                     <div class="profile-border"></div>
-                    <img src="https://i.ibb.co/MDKX3v3S/MOHAMMED-SAAD.jpg" alt="Mohammed Saad" class="profile-image">
+                    <img src="https://i.ibb.co/gLHczL51/Mohammed-Saad.jpg" alt="Mohammed Saad" class="profile-image">
                     <div class="profile-name">Mohammed Saad</div>
                     <div class="profile-role">Coach / Teacher</div>
                     <button class="select-btn">
@@ -764,7 +764,7 @@
 
                 <div class="profile-card" data-user="amir">
                     <div class="profile-border"></div>
-                    <img src="https://i.ibb.co/N2xbmCGw/Amir-majdi-alomari.jpg" alt="Amir Majdi" class="profile-image">
+                    <img src="https://i.ibb.co/xKT7qf8g/unnamed-3.jpg" alt="Amir Majdi" class="profile-image">
                     <div class="profile-name">Amir Majdi</div>
                     <div class="profile-role">Leader & Developer</div>
                     <button class="select-btn">
@@ -896,8 +896,8 @@
         };
 
         const userImages = {
-            moh: "https://i.ibb.co/MDKX3v3S/MOHAMMED-SAAD.jpg",
-            amir: "https://i.ibb.co/N2xbmCGw/Amir-majdi-alomari.jpg",
+            moh: "https://i.ibb.co/gLHczL51/Mohammed-Saad.jpg",
+            amir: "https://i.ibb.co/xKT7qf8g/unnamed-3.jpg",
             baraa: "https://i.ibb.co/8g2vKpV3/Baraa-picture.jpg",
             abdulrahman: "https://i.ibb.co/TMvrBqpG/Hamani-Dishdasha.jpg"
         };
