--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KNRC X Alnajat</title>
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://i.ibb.co/vCF5tR84/download-20.png">
-    
+
+    <!-- ============================= -->
+    <!--        SEO OPTIMIZATION       -->
+    <!-- ============================= -->
+
+    <meta name="description" content="The official KNRC X Alnajat robotics launcher — access dashboards, tools, and competition resources in one place.">
+    <meta name="keywords" content="KNRC, Alnajat, Robotics, Launcher, Kuwait Robotics, KNRC 2025, Alnajat School, Robotics Competition, STEM Kuwait">
+    <meta name="author" content="Alnajat School KNRC Team">
+
+    <!-- ============================= -->
+    <!--     SOCIAL SHARE PREVIEW      -->
+    <!-- ============================= -->
+
+    <!-- Open Graph (WhatsApp, Instagram, Discord, Telegram) -->
+    <meta property="og:title" content="KNRC X Alnajat Launcher">
+    <meta property="og:description" content="All KNRC robotics tools and team utilities in one smart launcher.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="YOUR_WEBSITE_URL_HERE">
+    <meta property="og:image" content="https://i.ibb.co/vCF5tR84/download-20.png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="KNRC X Alnajat Launcher">
+    <meta name="twitter:description" content="All KNRC robotics tools and team utilities in one smart launcher.">
+    <meta name="twitter:image" content="https://i.ibb.co/vCF5tR84/download-20.png">
+
+    <!-- Mobile Browser Theme Color -->
+    <meta name="theme-color" content="#0c1425">
     <style>
         * {
             margin: 0;
