--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             margin: 0 auto;
             position: relative;
             overflow: hidden;
-            animation: logoPulse 3s ease-in-out infinite;
+            animation: none;
         }
 
         .logo::before {
@@ -157,7 +157,7 @@
             width: 200%;
             height: 200%;
             background: linear-gradient(45deg, transparent, rgba(255, 255, 255, 0.3), transparent);
-            animation: logoShine 3s ease-in-out infinite;
+            animation: none;
         }
 
         @keyframes logoPulse {
@@ -776,7 +776,7 @@
             <div class="header">
                 <div class="logo-container">
                     <div class="logo">
-                        <img src="https://i.ibb.co/vCF5tR84/download-20.png" alt="KNRC Logo">
+                        <img src="https://github.com/amiralomarii/99/blob/main/download%20(20).png?raw=true" alt="KNRC Logo">
                     </div>
                 </div>
                 <h1>KNRC X Alnajat</h1>
@@ -786,7 +786,7 @@
             <div class="profile-grid">
                 <div class="profile-card" data-user="moh">
                     <div class="profile-border"></div>
-                    <img src="https://i.ibb.co/gLHczL51/Mohammed-Saad.jpg" alt="Mohammed Saad" class="profile-image">
+                    <img src="https://github.com/amiralomarii/99/blob/main/Mohammed%20Saad%20-%20Copy.jpg?raw=true" alt="Mohammed Saad" class="profile-image">
                     <div class="profile-name">Mohammed Saad</div>
                     <div class="profile-role">Coach / Teacher</div>
                     <button class="select-btn">
@@ -797,7 +797,7 @@
 
                 <div class="profile-card" data-user="amir">
                     <div class="profile-border"></div>
-                    <img src="https://i.ibb.co/xKT7qf8g/unnamed-3.jpg" alt="Amir Majdi" class="profile-image">
+                    <img src="https://github.com/amiralomarii/99/blob/main/unnamed%20(3).jpg?raw=true" alt="Amir Majdi" class="profile-image">
                     <div class="profile-name">Amir Majdi</div>
                     <div class="profile-role">Leader & Developer</div>
                     <button class="select-btn">
@@ -808,7 +808,7 @@
 
                 <div class="profile-card" data-user="baraa">
                     <div class="profile-border"></div>
-                    <img src="https://i.ibb.co/8g2vKpV3/Baraa-picture.jpg" alt="Baraa Mohamed" class="profile-image">
+                    <img src="https://github.com/amiralomarii/99/blob/main/Baraa%20picture%20-%20Copy.jpg?raw=true" alt="Baraa Mohamed" class="profile-image">
                     <div class="profile-name">Baraa Mohamed</div>
                     <div class="profile-role">Builder & Programmer</div>
                     <button class="select-btn">
@@ -819,7 +819,7 @@
 
                 <div class="profile-card" data-user="abdulrahman">
                     <div class="profile-border"></div>
-                    <img src="https://i.ibb.co/TMvrBqpG/Hamani-Dishdasha.jpg" alt="Abdulrahman" class="profile-image">
+                    <img src="https://github.com/amiralomarii/99/blob/main/Hamani%20Dishdasha.jpg?raw=true" alt="Abdulrahman" class="profile-image">
                     <div class="profile-name">Abdulrahman</div>
                     <div class="profile-role">Builder & Programmer</div>
                     <button class="select-btn">
