--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
                     <div class="profile-border"></div>
                     <img src="https://github.com/amiralomarii/99/blob/main/FUZAN%20FARAJ.jpg?raw=true" alt="Fouzan Faraj" class="profile-image">
                     <div class="profile-name">Fouzan Faraj</div>
-                    <div class="profile-role">Team Member</div>
+                    <div class="profile-role">Systems / Tester</div>
                     <button class="select-btn">
                         Select Profile
                         <i class="fas fa-arrow-right select-btn-icon"></i>
@@ -843,7 +843,7 @@
                     <div class="profile-border"></div>
                     <img src="https://github.com/amiralomarii/99/blob/main/RASHID%20KHALED.jpg?raw=true" alt="Rashid Khaled" class="profile-image">
                     <div class="profile-name">Rashid Khaled</div>
-                    <div class="profile-role">Team Member</div>
+                    <div class="profile-role">Designer / Strategy</div>
                     <button class="select-btn">
                         Select Profile
                         <i class="fas fa-arrow-right select-btn-icon"></i>
