--- a/index.html
+++ b/index.html
@@ -961,10 +961,10 @@
         };
 
         const userImages = {
-            moh: "https://i.ibb.co/gLHczL51/Mohammed-Saad.jpg",
-            amir: "https://i.ibb.co/xKT7qf8g/unnamed-3.jpg",
-            baraa: "https://i.ibb.co/8g2vKpV3/Baraa-picture.jpg",
-            abdulrahman: "https://i.ibb.co/TMvrBqpG/Hamani-Dishdasha.jpg",
+            moh: "https://github.com/amiralomarii/99/blob/main/Mohammed%20Saad%20-%20Copy.jpg?raw=true",
+            amir: "https://github.com/amiralomarii/99/blob/main/unnamed%20(3).jpg?raw=true",
+            baraa: "https://github.com/amiralomarii/99/blob/main/Baraa%20picture%20-%20Copy.jpg?raw=true",
+            abdulrahman: "https://github.com/amiralomarii/99/blob/main/Hamani%20Dishdasha.jpg?raw=true",
             fouzan: "https://github.com/amiralomarii/99/blob/main/FUZAN%20FARAJ.jpg?raw=true",
             rashid: "https://github.com/amiralomarii/99/blob/main/RASHID%20KHALED.jpg?raw=true"
         };
