--- a/index.html
+++ b/index.html
@@ -833,10 +833,10 @@
                     </button>
                 </div>
 
-                <div class="profile-card" data-user="baraa">
+                <div class="profile-card" data-user="abood">
                     <div class="profile-border"></div>
-                    <img src="https://github.com/amiralomarii/99/blob/main/Baraa%20picture%20-%20Copy.jpg?raw=true" alt="Baraa Mohamed" class="profile-image">
-                    <div class="profile-name">Baraa Mohamed</div>
+                    <img src="https://github.com/amiralomarii/99/blob/main/Abdullah%20Ahmed.jpg?raw=true" alt="Abdullah Ahmed" class="profile-image">
+                    <div class="profile-name">Abdullah Ahmed</div>
                     <div class="profile-role">Builder & Programmer</div>
                     <button class="select-btn">
                         Select Profile
@@ -954,7 +954,7 @@
                             <div class="member-role">Leader & Developer</div>
                         </div>
                         <div class="team-member">
-                            <div class="member-name">Baraa Mohamed Hashem</div>
+                            <div class="member-name">Abdullah Ahmed Alkhudair</div>
                             <div class="member-role">Builder & Programmer</div>
                         </div>
                         <div class="team-member">
@@ -984,7 +984,7 @@
         const userPasswords = {
             moh: "moh",         // Mohammed Saad password
             amir: "a3!!",       // Amir password
-            baraa: "b",         // Baraa password
+            abood: "abood",         // Abdullah password
             abdulrahman: "abd", // Abdulrahman password
             fouzan: "f",        // Fouzan Faraj password
             rashid: "r"         // Rashid Khaled password
@@ -993,7 +993,7 @@
         const userImages = {
              moh: "https://github.com/amiralomarii/99/blob/main/Mohammed%20Saad%20-%20Copy.jpg?raw=true",
             amir: "https://github.com/amiralomarii/99/blob/main/unnamed%20(3).jpg?raw=true",
-            baraa: "https://github.com/amiralomarii/99/blob/main/Baraa%20picture%20-%20Copy.jpg?raw=true",
+            abood: "https://github.com/amiralomarii/99/blob/main/Abdullah%20Ahmed.jpg?raw=true",
             abdulrahman: "https://github.com/amiralomarii/99/blob/main/Hamani%20Dishdasha.jpg?raw=true",
             fouzan: "https://github.com/amiralomarii/99/blob/main/FUZAN%20FARAJ.jpg?raw=true",
             rashid: "https://github.com/amiralomarii/99/blob/main/RASHID%20KHALED.jpg?raw=true"
@@ -1002,7 +1002,7 @@
         const userDisplayNames = {
             moh: "Mohammed",
             amir: "Amir Alomari", 
-            baraa: "Baraa",
+            abood: "Abdullah",
             abdulrahman: "Abdulrahman",
             fouzan: "Fouzan",
             rashid: "Rashid"
