--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
 
                 <div class="profile-card" data-user="fouzan">
                     <div class="profile-border"></div>
-                    <img src="https://github.com/amiralomarii/99/blob/main/FUZAN%20FARAJ.jpg?raw=true" alt="Fouzan Faraj" class="profile-image">
+                    <img src="https://github.com/amiralomarii/99/blob/main/FOUZANN.jpg?raw=true" alt="Fouzan Faraj" class="profile-image">
                     <div class="profile-name">Fouzan Faraj</div>
                     <div class="profile-role">Developer & Researcher</div>
                     <button class="select-btn">
@@ -963,11 +963,11 @@
                         </div>
                         <div class="team-member">
                             <div class="member-name">Fouzan Faraj</div>
-                            <div class="member-role">Team Member</div>
+                            <div class="member-role">Developer & Researcher</div>
                         </div>
                         <div class="team-member">
                             <div class="member-name">Rashid Khaled</div>
-                            <div class="member-role">Team Member</div>
+                            <div class="member-role">Designer & Planner</div>
                         </div>
                     </div>
                 </div>
@@ -995,7 +995,7 @@
             amir: "https://github.com/amiralomarii/99/blob/main/unnamed%20(3).jpg?raw=true",
             abood: "https://github.com/amiralomarii/99/blob/main/Abdullah%20Ahmed.jpg?raw=true",
             abdulrahman: "https://github.com/amiralomarii/99/blob/main/Hamani%20Dishdasha.jpg?raw=true",
-            fouzan: "https://github.com/amiralomarii/99/blob/main/FUZAN%20FARAJ.jpg?raw=true",
+            fouzan: "https://github.com/amiralomarii/99/blob/main/FOUZANN.jpg?raw=true",
             rashid: "https://github.com/amiralomarii/99/blob/main/RASHID%20KHALED.jpg?raw=true"
         };
 
