--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
                 <div class="profile-card" data-user="abdulrahman">
                     <div class="profile-border"></div>
                     <img src="https://github.com/amiralomarii/99/blob/main/Hamani%20Dishdasha.jpg?raw=true" alt="Abdulrahman" class="profile-image">
-                    <div class="profile-name">Abdulrahman</div>
+                    <div class="profile-name">Abdulrahman Alrashed</div>
                     <div class="profile-role">Builder & Programmer</div>
                     <button class="select-btn">
                         Select Profile
@@ -958,7 +958,7 @@
                             <div class="member-role">Builder & Programmer</div>
                         </div>
                         <div class="team-member">
-                            <div class="member-name">Abdulrahman Mohammed Abdulstar</div>
+                            <div class="member-name">Abdulrahman Mohammed Alrashed</div>
                             <div class="member-role">Builder & Programmer</div>
                         </div>
                         <div class="team-member">
