--- a/index.html
+++ b/index.html
@@ -919,25 +919,25 @@
                             <h3>TheKNRC</h3>
                             <p>Official Competition Portal</p>
                         </div>
-                        <div class="website-btn siteBtn" data-site="https://trellis3d.co/online-viewer/glb">
+                        <div class="website-btn siteBtn" data-site="https://instructions.online/?id=4063-2025-2026_viqrc_hero_bot_huey">
                             <i class="fas fa-cube" style="font-size: 2rem; color: #00d4ff; margin-bottom: 15px;"></i>
-                            <h3>Trellis 3D Viewer</h3>
+                            <h3>3D Building Instruction</h3>
                             <p>3D Model Viewer</p>
                         </div>
-                        <div class="website-btn siteBtn" data-site="https://limewire.com/d/C2QMh#g3lpjQAqxS">
-                            <i class="fas fa-download" style="font-size: 2rem; color: #00ff88; margin-bottom: 15px;"></i>
-                            <h3>3D Models</h3>
-                            <p>Download Resources</p>
+                        <div class="website-btn siteBtn" data-site="https://drive.google.com/drive/folders/1vOn1wFHQBMyp1ajOCqkeqsjMJSdIRuzJ?usp=sharing">
+                           <i class="far fa-file-download" style="font-size: 2rem; color: #00ff88; margin-bottom: 15px;"></i>
+                            <h3>Team Resource</h3>
+                            <p>Download Resources | Uploaded by Amir</p>
                         </div>
                         <div class="website-btn siteBtn" data-site="https://youtu.be/RN-UyJbe_yg">
                             <i class="fab fa-youtube" style="font-size: 2rem; color: #ff0000; margin-bottom: 15px;"></i>
                             <h3>VEX IQ YouTube</h3>
                             <p>Tutorial Videos</p>
                         </div>
-                        <div class="website-btn siteBtn admin-only" data-site="gofile">
-                            <i class="fas fa-crown" style="font-size: 2rem; color: #ffd700; margin-bottom: 15px;"></i>
-                            <h3>Gofile Download</h3>
-                            <p>Admin Only - A3 Resources</p>
+                        <div class="website-btn siteBtn" data-site="https://codeiq.vex.com/">
+                            <i class="fas fa-code" style="font-size: 2rem; color: #ffd700; margin-bottom: 15px;"></i>
+                            <h3>VEX IQ Code</h3>
+                            <p>Coding Online for VEX IQ</p>
                         </div>
                     </div>
                 </div>
