--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
                             <p>3D Model Viewer</p>
                         </div>
                         <div class="website-btn siteBtn" data-site="https://drive.google.com/drive/folders/1vOn1wFHQBMyp1ajOCqkeqsjMJSdIRuzJ?usp=sharing">
-                           <i class="far fa-file-download" style="font-size: 2rem; color: #00ff88; margin-bottom: 15px;"></i>
+                           <i class="fas fa-file-download" style="font-size: 2rem; color: #00ff88; margin-bottom: 15px;"></i>
                             <h3>Team Resource</h3>
                             <p>Download Resources | Uploaded by Amir</p>
                         </div>
