--- a/index.html
+++ b/index.html
@@ -860,11 +860,11 @@ body::before {
                     </button>
                 </div>
 
-                <div class="profile-card" data-user="abdulrahman">
+                <div class="profile-card" data-user="abdulatif">
                     <div class="profile-border"></div>
-                    <img src="https://github.com/amiralomarii/99/blob/main/Hamani%20Dishdasha.jpg?raw=true" alt="Abdulrahman" class="profile-image">
-                    <div class="profile-name">Abdulrahman Alrashed</div>
-                    <div class="profile-role">Builder & Programmer</div>
+                    <img src="https://github.com/amiralomarii/99/blob/main/Abdulatif%20Hassan.jpeg?raw=true" alt="Abdulatif" class="profile-image">
+                    <div class="profile-name">Abdulatif Hassan</div>
+                    <div class="profile-role">Supervisor & Driver</div>
                     <button class="select-btn">
                         Select Profile
                         <i class="fas fa-arrow-right select-btn-icon"></i>
@@ -974,8 +974,8 @@ body::before {
                             <div class="member-role">Builder & Programmer</div>
                         </div>
                         <div class="team-member">
-                            <div class="member-name">Abdulrahman Mohammed Alrashed</div>
-                            <div class="member-role">Builder & Programmer</div>
+                            <div class="member-name">Abdulatif Hassan Alsaleh</div>
+                            <div class="member-role">Supervisor & Driver</div>
                         </div>
                         <div class="team-member">
                             <div class="member-name">Fouzan Faraj</div>
@@ -1001,7 +1001,7 @@ body::before {
             moh: "moh",         // Mohammed Saad password
             amir: "a3!!",       // Amir password
             abood: "abood",         // Abdullah password
-            abdulrahman: "abd", // Abdulrahman password
+            abdulatif: "abood", // Abdulrahman password
             fouzan: "f",        // Fouzan Faraj password
             rashid: "r"         // Rashid Khaled password
         };
@@ -1010,7 +1010,7 @@ body::before {
              moh: "https://github.com/amiralomarii/99/blob/main/Mohammed%20Saad%20-%20Copy.jpg?raw=true",
             amir: "https://github.com/amiralomarii/99/blob/main/unnamed%20(3).jpg?raw=true",
             abood: "https://github.com/amiralomarii/99/blob/main/Abdullah%20Ahmed.jpg?raw=true",
-            abdulrahman: "https://github.com/amiralomarii/99/blob/main/Hamani%20Dishdasha.jpg?raw=true",
+            abdulatif: "https://github.com/amiralomarii/99/blob/main/Abdulatif%20Hassan.jpeg?raw=true",
             fouzan: "https://github.com/amiralomarii/99/blob/main/FOUZANN.jpg?raw=true",
             rashid: "https://github.com/amiralomarii/99/blob/main/RASHID%20KHALED.jpg?raw=true"
         };
@@ -1019,7 +1019,7 @@ body::before {
             moh: "Mohammed",
             amir: "Amir Alomari", 
             abood: "Abdullah",
-            abdulrahman: "Abdulrahman",
+            abdulatif: "Abdulatif",
             fouzan: "Fouzan",
             rashid: "Rashid"
         };
