--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@ body::before {
                     <div class="profile-border"></div>
                     <img src="https://github.com/amiralomarii/99/blob/main/Mohammed%20Saad%20-%20Copy.jpg?raw=true" alt="Mohammed Saad" class="profile-image">
                     <div class="profile-name">Mohammed Saad</div>
-                    <div class="profile-role">Coach / Teacher</div>
+                    <div class="profile-role">Coach & Teacher</div>
                     <button class="select-btn">
                         Select Profile
                         <i class="fas fa-arrow-right select-btn-icon"></i>
