--- a/index.html
+++ b/index.html
@@ -1073,6 +1073,11 @@ body::before {
             const buttons = document.querySelectorAll(".siteBtn");
 
             buttons.forEach(btn => {
+                // First, reset all buttons to visible
+                btn.style.display = "block";
+            });
+
+            buttons.forEach(btn => {
                 const site = btn.dataset.site;
 
                 // Non-Amir restrictions
@@ -1082,7 +1087,11 @@ body::before {
                     }
                 }
 
-                btn.addEventListener('click', function() {
+                // Remove old event listeners by cloning the button
+                const newBtn = btn.cloneNode(true);
+                btn.parentNode.replaceChild(newBtn, btn);
+
+                newBtn.addEventListener('click', function() {
                     if(site === "gofile") {
                         openGofile();
                     } else {
@@ -1152,7 +1161,7 @@ body::before {
 
         // Back button functionality
         document.getElementById('backBtn').addEventListener('click', function() {
-            document.getElementById('passwordInput').value = "";
+            document.getElementById("passwordInput").value = "";
             showScreen('profileScreen');
         });
 
