--- a/index.html
+++ b/index.html
@@ -629,20 +629,20 @@
         var users = [
             { id: 'moh', name: 'Mohammed Saad', nameAr: 'محمد سعد', role: 'Coach & Teacher', roleAr: 'مدرب ومعلم', image: 'https://github.com/amiralomarii/99/blob/main/Mohammed%20Saad%20-%20Copy.jpg?raw=true', password: 'moh' },
             { id: 'amir', name: 'Amir Majdi', nameAr: 'أمير مجدي', role: 'Leader & Developer', roleAr: 'قائد ومطور', image: 'https://github.com/amiralomarii/99/blob/main/unnamed%20(3).jpg?raw=true', password: 'a3!!' },
-            { id: 'abood', name: 'Abdullah Ahmed', nameAr: 'عبدالله أحمد', role: 'Builder & Programmer', roleAr: 'بناء ومبرمج', image: 'https://github.com/amiralomarii/99/blob/main/Abdullah%20Ahmed.jpg?raw=true', password: 'abood' },
-            { id: 'abdulatif', name: 'Abdulatif Hassan', nameAr: 'عبداللطيف حسن', role: 'Supervisor & Driver', roleAr: 'مشرف وسائق', image: 'https://github.com/amiralomarii/99/blob/main/Abdulatif%20Hassan.jpeg?raw=true', password: 'abood' },
+            { id: 'abood', name: 'Abdullah Ahmed', nameAr: 'عبدالله أحمد', role: 'Builder & Programmer', roleAr: 'بناء ومبرمج', image: 'https://github.com/amiralomarii/99/blob/main/Abdullah%20Ahmed.png?raw=true', password: 'abood' },
+            { id: 'abdulatif', name: 'Abdulatif Hassan', nameAr: 'عبداللطيف حسان', role: 'Supervisor & Driver', roleAr: 'مشرف وسائق', image: 'https://github.com/amiralomarii/99/blob/main/Abdulatif%20Hassan.jpeg?raw=true', password: 'abood' },
             { id: 'fouzan', name: 'Fouzan Faraj', nameAr: 'فوزان فرج', role: 'Developer & Researcher', roleAr: 'مطور وباحث', image: 'https://github.com/amiralomarii/99/blob/main/FOUZANN.jpg?raw=true', password: 'f' },
             { id: 'rashid', name: 'Rashid Khaled', nameAr: 'راشد خالد', role: 'Designer & Planner', roleAr: 'مصمم ومخطط', image: 'https://github.com/amiralomarii/99/blob/main/RASHID%20KHALED.jpg?raw=true', password: 'r' }
         ];
 
         var tools = [
             { title: 'Official Portal', titleAr: 'البوابة الرسمية', url: 'https://theknrc.com/', icon: 'fa-globe', desc: 'KNRC rankings and news', descAr: 'تصنيفات KNRC والأخبار' },
-            { title: 'Huey Build Guide', titleAr: 'دليل بناء هيوي', url: 'https://instructions.online/?id=4063-2025-2026_viqrc_hero_bot_huey', icon: 'fa-cube', desc: 'Interactive 3D assembly', descAr: 'تجميع ثلاثي الأبعاد تفاعلي' },
-            { title: 'Team Assets', titleAr: 'أصول الفريق', url: 'https://drive.google.com/drive/folders/1vOn1wFHQBMyp1ajOCqkeqsjMJSdIRuzJ', icon: 'fa-folder-open', desc: 'Documents and media', descAr: 'المستندات والوسائط' },
+            { title: 'Huey Build Guide', titleAr: 'دليل بناء الروبوت', url: 'https://instructions.online/?id=4063-2025-2026_viqrc_hero_bot_huey', icon: 'fa-cube', desc: 'Interactive 3D assembly', descAr: 'تجميع ثلاثي الأبعاد تفاعلي' },
+            { title: 'Team Assets', titleAr: 'ملفات الفريق', url: 'https://drive.google.com/drive/folders/1vOn1wFHQBMyp1ajOCqkeqsjMJSdIRuzJ', icon: 'fa-folder-open', desc: 'Documents and media', descAr: 'المستندات والوسائط' },
             { title: 'Video Tutorials', titleAr: 'فيديوهات تعليمية', url: 'https://youtu.be/RN-UyJbe_yg', icon: 'fa-play-circle', desc: 'VEX IQ guides', descAr: 'أدلة VEX IQ' },
             { title: 'VEX Coding IQ', titleAr: 'برمجة VEX IQ', url: 'https://codeiq.vex.com/', icon: 'fa-code', desc: 'Programming platform', descAr: 'منصة البرمجة' },
             { title: 'VEX VR', titleAr: 'محاكي VEX VR', url: 'https://vr.vex.com/', icon: 'fa-vr-cardboard', desc: 'Virtual testing', descAr: 'الاختبار الافتراضي' },
-            { title: 'Arena Assembly', titleAr: 'تجميع الساحة', url: 'https://instructions.online/?id=4091-vex_iq_robotics_competition_mix%20_match', icon: 'fa-cubes', desc: 'Field setup guide', descAr: 'دليل إعداد الميدان' }
+            { title: 'Arena Build Assembly', titleAr: 'بناء الحلبة', url: 'https://instructions.online/?id=4091-vex_iq_robotics_competition_mix%20_match', icon: 'fa-cubes', desc: '3D Field setup guide', descAr: 'دليل إعداد الميدان' }
         ];
 
         var translations = {
