--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
             { id: 'moh', name: 'Mohammed Saad', nameAr: 'محمد سعد', role: 'Coach & Teacher', roleAr: 'مدرب ومعلم', image: 'https://github.com/amiralomarii/99/blob/main/Mohammed%20Saad%20-%20Copy.jpg?raw=true', password: 'moh' },
             { id: 'amir', name: 'Amir Majdi', nameAr: 'أمير مجدي', role: 'Leader & Developer', roleAr: 'قائد ومطور', image: 'https://github.com/amiralomarii/99/blob/main/unnamed%20(3).jpg?raw=true', password: 'a3!!' },
             { id: 'abood', name: 'Abdullah Ahmed', nameAr: 'عبدالله أحمد', role: 'Builder & Programmer', roleAr: 'بناء ومبرمج', image: 'https://github.com/amiralomarii/99/blob/main/Abdullah%20Ahmed.png?raw=true', password: 'abood' },
-            { id: 'zaid', name: 'Zaid Tareq', nameAr:  'زيد طارق', role: 'Supervisor & Driver', roleAr: 'مشرف وسائق', image: 'https://github.com/amiralomarii/99/blob/main/Zaid%20tareqq.png?raw=true', password: 'zaid' },
+            { id: 'zaid', name: 'Zaid Tareq', nameAr:  'زيد طارق', role: 'Supervisor & Driver', roleAr: 'مشرف وسائق', image: 'https://raw.githubusercontent.com/amiralomarii/99/refs/heads/main/Zaid%20tareqq.png', password: 'zaid' },
             { id: 'fouzan', name: 'Fouzan Faraj', nameAr: 'فوزان فرج', role: 'Developer & Researcher', roleAr: 'مطور وباحث', image: 'https://github.com/amiralomarii/99/blob/main/FOUZANN.jpg?raw=true', password: 'f' },
             { id: 'rashid', name: 'Rashid Khaled', nameAr: 'راشد خالد', role: 'Designer & Planner', roleAr: 'مصمم ومخطط', image: 'https://github.com/amiralomarii/99/blob/main/RASHID%20KHALED.jpg?raw=true', password: 'r' }
         ];
