--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
             { id: 'abood', name: 'Abdullah Ahmed', nameAr: 'عبدالله أحمد', role: 'Builder & Programmer', roleAr: 'بناء ومبرمج', image: 'https://github.com/amiralomarii/99/blob/main/Abdullah%20Ahmed.png?raw=true', password: 'abood' },
             { id: 'zaid', name: 'Zaid Tareq', nameAr:  'زيد طارق', role: 'Supervisor & Driver', roleAr: 'مشرف وسائق', image: 'https://raw.githubusercontent.com/amiralomarii/99/refs/heads/main/Zaid%20tareqq.png', password: 'zaid' },
             { id: 'fouzan', name: 'Fouzan Faraj', nameAr: 'فوزان فرج', role: 'Developer & Researcher', roleAr: 'مطور وباحث', image: 'https://github.com/amiralomarii/99/blob/main/FOUZANN.jpg?raw=true', password: 'f' },
-            { id: 'rashid', name: 'Rashid Khaled', nameAr: 'راشد خالد', role: 'Designer & Planner', roleAr: 'مصمم ومخطط', image: 'https://github.com/amiralomarii/99/blob/main/RASHID%20KHALED.jpg?raw=true', password: 'r' }
+            { id: 'rashid', name: 'Rashid Khaled', nameAr: 'راشد خالد', role: 'Designer & Builder', roleAr: 'مصمم وباني', image: 'https://github.com/amiralomarii/99/blob/main/RASHID%20KHALED.jpg?raw=true', password: 'r' }
         ];
 
         var tools = [
